<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileManagement">

    <TextView
        android:id="@+id/tv_profile_management"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_profile_management"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_profile_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/et_username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/et_profile_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/et_dob"
        android:importantForAutofill="no"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/et_profile_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/et_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_profile_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/tv_gender"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_profile_gender">

            <RadioButton
                android:id="@+id/rd_profile_btn_male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rd_btn_male" />
            <RadioButton
                android:id="@+id/rd_profile_btn_female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rd_btn_female" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_profile_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_profile_update"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_profile_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_profile_add" />

        <Button
            android:id="@+id/btn_profile_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/btn_profile_add"
            app:layout_constraintEnd_toStartOf="@+id/btn_profile_update"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>