<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/tv_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_home"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_home_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/et_username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#757575"
        android:textColorHint="#757575"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et_home_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/et_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/btn_login"
            app:layout_constraintEnd_toStartOf="@+id/btn_register"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_register"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_login" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>